        characteristic with a few t_INT coefficients ]
    57- intnumgaussinit(n) actually used 2*ceil(max(4,n/2)) quadrature points
BA  58- [pthread] parapply could crash
BA  59- ffinvmap(m) could SEGV on bad input
    60- ellisdivisible(E/K number field in 'x) -> incorrect priority[#2106]
    61- idealispower(nf, t_INT n) possibly wrong if (n, nf.disc) > 1

  Changed
     1- [libpari] gp_filter return value is now allocated on the stack
        [was undocumented, malloc'ed and resulted in memory leaks]
     2- improved n!, factorial(n) and lngamma(n) for integral n
     3- improved bernvec: no longer Obsolete
     4- [libpari] mpbern is now obsolete: use constbern
     5- rewrote the Bernoulli number cache (using zeta(2n) = * B_{2n})
        and power recycling for zeta(2n) + additive Clausen von Staudt):
        orders of magnitude faster and always store Bernoulli in rational form
BA   6- [libpari] ZpX_ZpXQ_liftroot_ea: change interface for 'early'
     7- bnf.fu: return '0' if bnf does not contain the fundamental units (was an
        error)
     8- support ?? _+_ and friends [extended help for specific operators
        instead of redirecting to "GP operators"]
     9- support ?? _op=_ and ?? op=; support ?? _++ and friends
    10- x ^ t_FRAC: return an exact result if possible; e.g. 4^(1/2) is now 2
HC  11- gamma(t_FRAC) use direct formula when denom | 24
    12- serlaplace(scalar) -> return the scalar (understood as a constant
        polynomial) instead of raising an exception [#2082]
    13- implement hyperu for arbitrary complex parameters
    14- extend lex() to allow complex numbers
    15- lfunconductor(L, [a,b]) no longer supported to look for conductor in
        interval [a,b]; implement lfunconductor(L, list of potential N) instead
    16- renamed GP functions Strchr -> strchr (pari_strchr in libpari),
        Strexpand -> strexpand, Strprintf -> strprintf, Strtex -> strtex