@@ -22,3 +22,4 @@ zeta(O(x))
 default(seriesprecision,3)
 zeta(1+x)
 zeta(1/2+I*x+O(x^2))
+zeta''(0)
