@@ -80,6 +80,8 @@ BA  58- [pthread] parapply could crash
 BA  59- ffinvmap(m) could SEGV on bad input
     60- ellisdivisible(E/K number field in 'x) -> incorrect priority[#2106]
     61- idealispower(nf, t_INT n) possibly wrong if (n, nf.disc) > 1
+    62- zeta''(0): all precision lost [more generally f'...'(n quotes)
+        imprecise in the neighbourhood of 0, while derivnum(,n) was OK]
 
   Changed
      1- [libpari] gp_filter return value is now allocated on the stack
